# AoC-2022

./: advent-of-code.cabal  new-day-gen.sh
solutions/: day-1.hs  day-10.hs  day-11.hs  day-12.hs  day-13.hs  day-14.hs  day-2.hs  day-3.hs  day-4.hs  day-5.hs  day-6.hs  day-7.hs  day-8.hs  day-9.hs
