cabal-version: 3.6

name:           advent-of-code
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/lsmor/template-advent-of-code#readme>
homepage:       https://github.com/lsmor/template-advent-of-code#readme
bug-reports:    https://github.com/lsmor/template-advent-of-code/issues
author:         Luis Morillo Najarro
copyright:      2021 Luis Morillo Najarro
license:        BSD-3-Clause
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/lsmor/template-advent-of-code

common deps
  default-extensions:
      TypeApplications
      OverloadedStrings
      LambdaCase
      TupleSections
      StrictData
      ImportQualifiedPost
      RecordWildCards
  build-depends:
      attoparsec
    , base >=4.7 && <5
    , bytestring
    , containers
    , matrix
    , vector
    , split
    , data-interval
    , mtl
  hs-source-dirs:
      solutions
  other-modules:
      Paths_advent_of_code
  default-language: Haskell2010


executable day-1
  import: deps
  main-is: day-1.hs

executable day-2
  import: deps
  main-is: day-2.hs

executable day-3
  import: deps
  main-is: day-3.hs

executable day-4
  import: deps
  main-is: day-4.hs

executable day-5
  import: deps
  main-is: day-5.hs

executable day-6
  import: deps
  main-is: day-6.hs


executable day-7
  import: deps
  main-is: day-7.hs


executable day-8
  import: deps
  main-is: day-8.hs


executable day-9
  import: deps
  main-is: day-9.hs


executable day-10
  import: deps
  main-is: day-10.hs


